--- a/index.html
+++ b/index.html
@@ -1,39 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Crystal Collector</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-</head>
-
-<body>
- <div class= "container">
-     
-     <div class = "jumbotron"> <style background-color:purple;color: white;>
-    <div Class = "container">
-        <h1 class = "text-center"><strong>Crystal Collector</strong>/h1>     
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="container" style="width:400px;">
+      <div style="background-color:chocolate">
+        <h1 class="text-align:left">
+          <strong>Crystal Collector! </strong>
+        </h1>
+      </div>
     </div>
-     </div>
- <div class ="row>"   >
-     <div class ="col-lg-12">
-         <div class ="panel panel primary">
-             <div class ="panel-heading">
-                 <h3 class = "panel-title text-center"><Instructor</h3>
-                </h3>
-             </div>
-             <div class = <"panel-body">
-                 <p><small> </small></p>
-             </div>
-         </div>
-     </div>
- </div> 
+    <div class="container">
+      <div class="jumbotron" style="background-color: bisque;">
+        <p>
+          You will be given a random number at the start of the game.
+        </p>
 
- </div>
-</body>
-
+        <p>
+          There are four crystals below.By clicking on a crystal you will add a
+          specific amount of points to your total score.
+        </p>
+        <p>
+          You win the game by matching your total score to random number,you
+          loose the game if your total score goes above the random number.
+        </p>
+        <p>
+          The Value of each crystal is hidden from you until you click on it.
+        </p>
+        <p>
+          Each time when the game starts ,the game will change the values of
+          each crystal.
+        </p>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5" style="background-color:green; margin:3px">
+          <h6>Target Score!</h6>
+          <h6 id="TargetScore">39</h6>
+        </div>
+        <div class="col-lg-5" style="background-color:aqua;">
+          <h6 id="win">Win:0</h6>
+          <h6 id="losses">losses :0</h6>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div
+        id="crystal1"
+        style="display:inline-block; height:100px; width:100px; background-color:palevioletred"
+      >
+        crystal1
+      </div>
+      <div
+        id="crystal2"
+        style="display:inline-block; height:100px; width:100px; background-color:blue"
+      >
+        crystal2
+      </div>
+      <div
+        id="crystal3"
+        style="display:inline-block; height:100px; width:100px; background-color:yellow"
+      >
+        crystal3
+      </div>
+      <div
+        id="crystal4"
+        style="display:inline-block; height:100px; width:100px; background-color:green"
+      >
+        crystal4
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5" style="background-color:cadetblue;margin:3px">
+          <p>Your Total Score is :</p>
+          <p id="userScore">0</p>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="container">
+      <div class="col-lg-6" style="background-color:burlywood;">
+        <h6>0</h6>
+      </div>
+    </div> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="file.js"></script>
+  </body>
 </html>
